--- a/selfdrive/assets/assets.qrc
+++ b/selfdrive/assets/assets.qrc
@@ -6,7 +6,7 @@
   <file>img_circled_slash.svg</file>
   <file>img_eye_open.svg</file>
   <file>img_eye_closed.svg</file>
-  <file>img_battery_heater.svg</file>
+  <file>img_battery_heater.png</file>
   <file>icons/close.svg</file>
   <file>offroad/icon_lock_closed.svg</file>
   <file>offroad/icon_checkmark.svg</file>
